@startuml

class BrainLord { 
 NUM_ROUNDS
 play()
} 

class Player {
 Pattern guess()
 giveFeedBack(FeedBack)
 round(newRound)
 win() 
 lose() 
} 

class Pattern { 
 LENGTH
 generate()
 fromRow(row)
 getElement(i)
} 

class ColorSet {
 Color getRandom()
 bool isValid()
}

class Color {
 getName()
}

class FeedBack { 
 check(Pattern guess, Pattern secret)
 bool isVictory() 
 getWhites()
 getBlacks()
}

class Marker {
 WHITE
 BLACK
 EMPTY 
}

BrainLord *-- Player 
BrainLord *-- Pattern 
BrainLord ..> FeedBack 

Player ..> Pattern 
Player ..> FeedBack
Player --> ColorSet

Pattern *-- ColorSet
Pattern o-- Color

ColorSet o-- Color

FeedBack ..> Pattern
FeedBack *-- Marker

@enduml